--- a/Tumblr/Base.lproj/Main.storyboard
+++ b/Tumblr/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tumblr-->
+        <!--Photos View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="PhotosViewController" customModule="Tumblr" customModuleProvider="target" sceneMemberID="viewController">
@@ -21,15 +21,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="255" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2Su-wM-Aw0">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="353" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2Su-wM-Aw0">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PhotoCell" rowHeight="240" id="IPp-yA-LBE" customClass="PhotoTableViewCell" customModule="Tumblr" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="240"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PhotoCell" id="IPp-yA-LBE" customClass="PhotoTableViewCell" customModule="Tumblr" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="353"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IPp-yA-LBE" id="pOw-BU-Qbs">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="239"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="352"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LF7-Xj-18Q">
@@ -38,14 +38,25 @@
                                                         <constraint firstAttribute="height" constant="240" id="cSC-eq-6qX"/>
                                                     </constraints>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nXh-Ug-C12">
+                                                    <rect key="frame" x="25" y="248" width="325" height="96"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="nXh-Ug-C12" firstAttribute="top" secondItem="LF7-Xj-18Q" secondAttribute="bottom" constant="8" id="8if-Kg-Vsg"/>
                                                 <constraint firstItem="LF7-Xj-18Q" firstAttribute="leading" secondItem="pOw-BU-Qbs" secondAttribute="leading" id="GF8-Df-W1A"/>
                                                 <constraint firstItem="LF7-Xj-18Q" firstAttribute="top" secondItem="pOw-BU-Qbs" secondAttribute="top" id="XOy-lx-9Va"/>
+                                                <constraint firstAttribute="trailing" secondItem="nXh-Ug-C12" secondAttribute="trailing" constant="25" id="bFh-DS-QVq"/>
+                                                <constraint firstItem="nXh-Ug-C12" firstAttribute="leading" secondItem="pOw-BU-Qbs" secondAttribute="leading" constant="25" id="cNg-bz-F9w"/>
+                                                <constraint firstAttribute="bottom" secondItem="nXh-Ug-C12" secondAttribute="bottom" constant="8" id="gBx-Kn-9Rj"/>
                                                 <constraint firstAttribute="trailing" secondItem="LF7-Xj-18Q" secondAttribute="trailing" id="qbr-79-vTk"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="captionLabel" destination="nXh-Ug-C12" id="lKk-Vw-Xvy"/>
                                             <outlet property="photoImageView" destination="LF7-Xj-18Q" id="Abz-bJ-nWK"/>
                                         </connections>
                                     </tableViewCell>
@@ -60,7 +71,7 @@
                             <constraint firstItem="2Su-wM-Aw0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kvu-7q-dNt"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Tumblr" id="yvw-ir-pSu"/>
+                    <navigationItem key="navigationItem" id="yvw-ir-pSu"/>
                     <connections>
                         <outlet property="tableView" destination="2Su-wM-Aw0" id="ErG-w2-Q28"/>
                     </connections>
